<resources>
    <string name="app_name">mendez_pa1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Producto Académico 1</string>
    <string name="nav_header_subtitle">Edwin W. Mendez Echevarria</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_acerca">Acerca</string>
    <string name="menu_area_triangulo">Área Triángulo</string>
    <string name="menu_numero_aleatorio">Número Aleatorio</string>
    <string name="menu_binario_decimal">Binario a Decimal</string>
    <string name="menu_hex_binario">Hex a Binario</string>

    <string name="fragment_acerca_nombre">Edwin W. Mendez Echevarria</string>">
    <string name="fragment_acerca_codigo">45088035</string>
    <string name="fragment_acerca_curso">Desarrollo de Aplicaciones Móviles</string>
    <string name="fragment_acerca_nrc">74239</string>

</resources>